--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.yourcompany.e1547"
     android:versionCode="1"
-    android:versionName="0.0.1">
+    android:versionName="0.0.1-alpha">
 
     <uses-sdk android:minSdkVersion="16" android:targetSdkVersion="21" />
 
@@ -16,8 +16,8 @@
          In most cases you can leave this as-is, but you if you want to provide
          additional functionality it is fine to subclass or reimplement
          FlutterApplication and put your custom class here. -->
-    <application android:name="io.flutter.app.FlutterApplication" android:label="e1547" android:icon="@mipmap/ic_launcher">
-        <activity android:name=".MainActivity"
+    <application android:name="io.flutter.app.FlutterApplication" android:label="e1547" android:icon="@mipmap/paw">
+        <activity android:name="io.vczf.e1547.MainActivity"
                   android:launchMode="singleTop"
                   android:theme="@android:style/Theme.Black.NoTitleBar"
                   android:configChanges="orientation|keyboardHidden|keyboard|screenSize|locale|layoutDirection"
