--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.yourcompany.e1547"
-    android:versionCode="1"
-    android:versionName="0.0.1-alpha">
+    package="io.vczf.e1547"
+    android:versionCode="2"
+    android:versionName="0.0.2-alpha">
 
     <uses-sdk android:minSdkVersion="16" android:targetSdkVersion="21" />
 
