--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,7 +12,7 @@ dependencies:
   vector_math: any
 
   # Flutter
-  shared_preferences: any
+  shared_preferences: '0.2.4'
   url_launcher: any
 
   flutter:
