Revert "Pin shared_preferences to '0.2.4' so app works"
This reverts commit 91dda3e7d44c382b8b404b134cfb46876a99f25b.

see: https://github.com/flutter/flutter/issues/10872

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,7 +11,7 @@ dependencies:
   vector_math: any
 
   # Flutter
-  shared_preferences: '0.2.4'
+  shared_preferences: any
   url_launcher: any
 
   flutter:
