--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,9 +35,8 @@ flutter:
 
   # To add assets to your application, add an assets section here, in
   # this "flutter" section, as in:
-  # assets:
-  #  - images/a_dot_burr.jpeg
-  #  - images/a_dot_ham.jpeg
+  assets:
+   - icons/paw.png
 
   # To add assets from package dependencies, first ensure the asset
   # is in the lib/ directory of the dependency. Then,
