--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -5,6 +5,9 @@ dependencies:
   # Mine
   zoomable_image: ^1.1.2
 
+  # Third party
+  flutter_staggered_grid_view: ^0.1.2
+
   # Dart
   http: ^0.11.3
   logging: ^0.11.3
