--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,7 +12,7 @@ dependencies:
   http: 0.11.3+16
   logging: 0.11.3+1
   meta: 1.1.2
-  test: 0.12.33
+  test: 0.12.32+2
   vector_math: 2.0.5
 
   # Flutter
