--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -6,15 +6,15 @@ dependencies:
   zoomable_image: 1.1.2
 
   # Third party
-  flutter_staggered_grid_view: 0.1.2
+  flutter_staggered_grid_view: 0.1.3
   font_awesome_flutter: 6.0.0
 
   # Dart
   http: 0.11.3+16
   logging: 0.11.3+1
   meta: 1.1.2
-  test: 0.12.32+2
-  vector_math: 2.0.5
+  test: 0.12.34
+  vector_math: 2.0.6
 
   # Flutter
   shared_preferences: 0.4.1
