--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="io.vczf.e1547"
     android:versionCode="20"
-    android:versionName="0.2.0-alpha">
+    android:versionName="1.0.0">
 
     <uses-sdk android:minSdkVersion="16" android:targetSdkVersion="27" />
 
