--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="io.vczf.e1547"
-    android:versionCode="20"
+    package="us.perlat.e1547"
+    android:versionCode="1"
     android:versionName="1.0.0">
 
     <uses-sdk android:minSdkVersion="16" android:targetSdkVersion="27" />
@@ -17,7 +17,7 @@
          additional functionality it is fine to subclass or reimplement
          FlutterApplication and put your custom class here. -->
     <application android:name="io.flutter.app.FlutterApplication" android:label="e1547" android:icon="@mipmap/paw">
-        <activity android:name="io.vczf.e1547.MainActivity"
+        <activity android:name="us.perlat.e1547.MainActivity"
                   android:launchMode="singleTop"
                   android:theme="@android:style/Theme.Black.NoTitleBar"
                   android:configChanges="orientation|keyboardHidden|keyboard|screenSize|locale|layoutDirection"
