--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -6,6 +6,7 @@ dependencies:
   zoomable_image: 1.1.2
 
   # Third party
+  cached_network_image: 0.4.1
   flutter_staggered_grid_view: 0.1.3
   font_awesome_flutter: 6.0.0
 
