--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -8,6 +8,7 @@ dependencies:
 
   # Third party
   cached_network_image: 0.4.1
+  flutter_cache_manager: 0.1.1
   flutter_staggered_grid_view: 0.1.3
   font_awesome_flutter: 6.0.0
 
