--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,7 @@ dependencies:
 
   flutter_staggered_grid_view: 0.1.3
   font_awesome_flutter: 6.0.0
+  simple_permissions: 0.1.3
 
   # Dart
   http: 0.11.3+16
