--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,11 +7,8 @@ dependencies:
     git: git://github.com/perlatus/flutter_zoomable_image.git
 
   # Third party
-  cached_network_image:
-    path: ../fork/flutter_cached_network_image
-  flutter_cache_manager:
-    path: ../fork/flutter_cache_manager
-
+  cached_network_image: 0.4.1
+  flutter_cache_manager: 0.1.1
   flutter_staggered_grid_view: 0.1.3
   font_awesome_flutter: 6.0.0
   simple_permissions: 0.1.3
