--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,18 +7,22 @@ dependencies:
     path: vendor/zoomable_image
 
   # Third party
-  cached_network_image: 0.4.1
-  flutter_cache_manager: 0.1.1
-  flutter_staggered_grid_view: 0.1.3
+  flutter_staggered_grid_view: 0.2.2
   font_awesome_flutter: 6.0.0
   simple_permissions: 0.1.3
 
+  # Third party vendored (forks)
+  cached_network_image:
+    path: vendor/flutter_cached_network_image
+  flutter_cache_manager:
+    path: vendor/flutter_cache_manager
+
   # Dart
-  http: 0.11.3+16
-  logging: 0.11.3+1
+  http: 0.11.3+17
+  logging: 0.11.3+2
   meta: 1.1.5
-  test: 0.12.37
-  vector_math: 2.0.6
+  test: 0.12.41
+  vector_math: 2.0.8
 
   # Flutter
   share:
