--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="us.perlat.e1547"
     android:versionCode="2"
-    android:versionName="1.0.1-dev">
+    android:versionName="1.0.1">
 
     <uses-sdk android:minSdkVersion="16" android:targetSdkVersion="27" />
 
