--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -2,33 +2,27 @@ name: e1547
 description: A mobile app for browsing e926.net and friends.
 
 dependencies:
-  # Mine
-  zoomable_image:
-    path: vendor/zoomable_image
 
   # Third party
-  flutter_staggered_grid_view: 0.2.2
-  font_awesome_flutter: 8.0.1
-  simple_permissions: 0.1.6
-
-  # Third party vendored (forks)
-  cached_network_image:
-    path: vendor/flutter_cached_network_image
-  flutter_cache_manager:
-    path: vendor/flutter_cache_manager
+  photo_view: 0.9.2
+  flutter_staggered_grid_view: 0.3.0
+  font_awesome_flutter: 8.7.0
+  permission_handler: 4.3.0
+  cached_network_image: 2.0.0
+  flutter_cache_manager: 1.1.3
+  like_button: 0.2.0
+  esys_flutter_share: 1.0.2
 
   # Dart
   http: 0.11.3+17
   logging: 0.11.3+2
-  meta: 1.1.6
-  test: 1.3.0
+  meta: 1.1.8
+  test: 1.9.4
   vector_math: 2.0.8
 
   # Flutter
-  share:
-    path: vendor/flutter_plugins/packages/share
-  shared_preferences: 0.4.1
-  url_launcher: 3.0.0
+  shared_preferences: 0.5.6
+  url_launcher: 5.4.2
 
   flutter:
     sdk: flutter
