--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,37 +1,43 @@
 name: e1547
-description: A mobile app for browsing e926.net and friends.
+description: Dragon's e1547 fork.
+
+version: 1.0.0+1
+
+environment:
+  sdk: ">=2.2.0 <3.0.0"
 
 dependencies:
 
-  # Third party
-  photo_view: 0.9.2
-  flutter_staggered_grid_view: 0.3.0
-  font_awesome_flutter: 8.7.0
-  permission_handler: 4.3.0
-  cached_network_image: 2.0.0
-  flutter_cache_manager: 1.1.3
-  like_button: 0.2.0
-  esys_flutter_share: 1.0.2
+  esys_flutter_share: ^1.0.2
+  url_launcher: ^5.4.2
 
-  # Dart
-  http: 0.11.3+17
-  logging: 0.11.3+2
-  meta: 1.1.8
-  test: 1.9.4
-  vector_math: 2.0.8
+  like_button: ^0.2.0
+  photo_view: ^0.9.2
+  cached_network_image: ^2.0.0
+  flutter_staggered_grid_view: ^0.3.0
 
-  # Flutter
-  shared_preferences: 0.5.6
-  url_launcher: 5.4.2
+  permission_handler: ^4.3.0
+  shared_preferences: ^0.5.6
+
+  flutter_launcher_icons: ^0.7.4
 
   flutter:
     sdk: flutter
+
+  cupertino_icons: ^0.1.2
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
 
+
+flutter_icons:
+
+  android: "launcher_icon"
+  ios: true
+  image_path: "assets/icon/paw.png"
+
 flutter:
   uses-material-design: true
   assets:
-   - icons/paw.png
+    - assets/icon/paw.png
