--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,7 @@ dependencies:
   shared_preferences: ^0.5.6
 
   flutter_launcher_icons: ^0.7.4
+  flutter_native_splash: ^0.1.9
 
   flutter:
     sdk: flutter
@@ -36,6 +37,12 @@ flutter_icons:
   android: "launcher_icon"
   ios: true
   image_path: "assets/icon/paw.png"
+
+
+flutter_native_splash:
+  image: "assets/icon/paw.png"
+  color: "000000"
+  android_disable_fullscreen: true
 
 flutter:
   uses-material-design: true
