--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,13 +1,14 @@
 name: e1547
 description: A mobile app for e621+e926.
 
-version: 1.1.2+6
+version: 1.1.3+7
 
 environment:
   sdk: ">=2.2.2 <3.0.0"
 
 dependencies:
 
+  flutter_parsed_text: ^1.2.4
   esys_flutter_share: ^1.0.2
   url_launcher: ^5.4.2
 
