--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: e1547
 description: A mobile app for e621+e926.
 
-version: 1.2.1+11
+version: 1.2.2+12
 
 environment:
   sdk: ">=2.2.2 <3.0.0"
@@ -11,6 +11,8 @@ dependencies:
   icon_shadow: ^1.0.1
   flutter_parsed_text: ^1.2.4
   url_launcher: ^5.4.2
+  share: ^0.6.3+6
+  intl: ^0.16.1
 
   like_button: ^0.2.0
   photo_view: ^0.9.2
