--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -8,6 +8,7 @@ environment:
 
 dependencies:
 
+  pull_to_refresh: ^1.5.8
   icon_shadow: ^1.0.1
   flutter_parsed_text: ^1.2.4
   url_launcher: ^5.4.2
