--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,13 +1,14 @@
 name: e1547
 description: A mobile app for e621+e926.
 
-version: 1.2.4+14
+version: 1.2.5+15
 
 environment:
   sdk: ">=2.2.2 <3.0.0"
 
 dependencies:
 
+  flutter_typeahead: ^1.8.0
   pull_to_refresh: ^1.5.8
   icon_shadow: ^1.0.1
   flutter_parsed_text: ^1.2.4
@@ -17,7 +18,6 @@ dependencies:
 
   like_button: ^0.2.0
   photo_view: ^0.9.2
-  video_player: ^0.10.8+1
   cached_network_image: ^2.0.0
   flutter_staggered_grid_view: ^0.3.0
 
