--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -8,10 +8,12 @@ environment:
 
 dependencies:
 
+  expandable: ^4.1.3
   flutter_typeahead: ^1.8.0
   pull_to_refresh: ^1.5.8
   icon_shadow: ^1.0.1
   flutter_parsed_text: ^1.2.4
+
   url_launcher: ^5.4.2
   share: ^0.6.3+6
   intl: ^0.16.1
