--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: e1547
 description: A mobile app for e621+e926.
 
-version: 1.6.0+33
+version: 1.6.1+34
 
 environment:
   sdk: ">=2.2.2 <3.0.0"
@@ -13,26 +13,29 @@ dependencies:
   pull_to_refresh: ^1.5.8
   icon_shadow: ^1.0.1
 
-  url_launcher: ^5.4.2
+  url_launcher: ^5.5.3
   share: ^0.6.3+6
   intl: ^0.16.1
 
   like_button: ^1.0.1
-  photo_view: ^0.9.2
-  cached_network_image: ^2.0.0
+  photo_view:
+    git:
+      url: https://github.com/fireslime/photo_view.git
+      ref: master
+  cached_network_image: ^2.3.2
   flutter_staggered_grid_view: ^0.3.0
 
-  permission_handler: ^4.3.0
+  permission_handler: ^5.0.1+1
   shared_preferences: ^0.5.6
 
-  flutter_launcher_icons: ^0.7.4
+  flutter_launcher_icons: ^0.8.0
   flutter_native_splash: ^0.1.9
   flutter_statusbarcolor: ^0.2.3
 
   flutter:
     sdk: flutter
 
-  cupertino_icons: ^0.1.2
+  cupertino_icons: ^1.0.0
 
 dev_dependencies:
   flutter_test:
