--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,6 +13,7 @@ dependencies:
   pull_to_refresh: ^1.5.8
   icon_shadow: ^1.0.1
 
+  http_auth: ^0.3.0
   url_launcher: ^5.5.3
   share: ^0.6.3+6
   intl: ^0.16.1
