--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: e1547
 description: A mobile app for e621+e926.
 
-version: 1.6.2+35
+version: 1.7.0+36
 
 environment:
   sdk: ">=2.2.2 <3.0.0"
@@ -16,6 +16,7 @@ dependencies:
   flutter_staggered_grid_view: ^0.3.0
 
   video_player: ^0.11.0
+  wakelock: ^0.2.0+1
   photo_view:
     git:
       url: https://github.com/fireslime/photo_view.git
