fixed webm issues

--- a/.gitignore
+++ b/.gitignore
@@ -15,10 +15,11 @@
 *.iws
 .idea/
 
-# The .vscode folder contains launch configuration and tasks you configure in
-# VS Code which you may wish to be included in version control, so this line
-# is commented out by default.
-#.vscode/
+# gradle
+gradle/
+.gradle/
+local.properties
+/android/app/keys
 
 # Flutter/Dart/Pub related
 **/doc/api/
@@ -35,5 +36,3 @@ lib/generated_plugin_registrant.dart
 
 # Exceptions to above rules.
 !/packages/flutter_tools/test/data/dart_dependencies_test/**/.packages
-
-!.idea/
