--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,8 +9,8 @@ environment:
 dependencies:
 
   expandable: ^4.1.3
-  flutter_typeahead: ^1.8.0
-  pull_to_refresh: ^1.5.8
+  flutter_typeahead: ^2.0.0
+  pull_to_refresh: 1.6.3
   icon_shadow: ^1.0.1
   like_button: ^1.0.1
   flutter_staggered_grid_view: ^0.3.3
@@ -28,11 +28,11 @@ dependencies:
   share: ^0.6.3+6
   intl: ^0.16.1
 
-  permission_handler: ^5.0.1+1
+  permission_handler: ^5.1.0+2
   shared_preferences: ^0.5.6
 
   flutter_launcher_icons: ^0.8.0
-  flutter_native_splash: ^0.1.9
+  flutter_native_splash: ^0.2.9
   flutter_statusbarcolor: ^0.2.3
 
   flutter:
