--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,7 +13,7 @@ dependencies:
   pull_to_refresh: 1.6.3
   icon_shadow: ^1.0.1
   like_button: ^1.0.1
-  flutter_staggered_grid_view: ^0.3.3
+  flutter_staggered_grid_view: 0.3.3
 
   video_player: ^1.0.0
   wakelock: ^0.2.0+1
