--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,7 +4,7 @@ description: A mobile app for e621+e926.
 version: 1.7.2+38
 
 environment:
-  sdk: ">=2.2.2 <3.0.0"
+  sdk: '>=2.6.0 <3.0.0'
 
 dependencies:
 
@@ -13,6 +13,7 @@ dependencies:
   pull_to_refresh: 1.6.3
   icon_shadow: ^1.0.1
   like_button: ^1.0.1
+  font_awesome_flutter: ^8.11.0
   flutter_staggered_grid_view: 0.3.3
 
   video_player: ^1.0.0
