added sliding wiki dialog

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,7 @@ dependencies:
   like_button: ^1.0.1
   font_awesome_flutter: ^8.11.0
   flutter_staggered_grid_view: 0.3.3
+  sliding_sheet: ^0.4.1
 
   video_player: ^1.0.0
   wakelock: ^0.2.0+1
@@ -28,12 +29,12 @@ dependencies:
   url_launcher: ^5.5.3
   share: ^0.6.3+6
   intl: ^0.16.1
+  async: ^2.4.2
 
   permission_handler: ^5.1.0+2
   shared_preferences: ^0.5.6
 
-  flutter_launcher_icons: ^0.8.0
-  flutter_native_splash: ^0.2.9
+
   flutter_statusbarcolor: ^0.2.3
 
   flutter:
@@ -43,17 +44,17 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
 
+  flutter_launcher_icons: ^0.8.0
+  flutter_native_splash: ^0.2.9
 
 flutter_icons:
-
-  android: "launcher_icon"
   ios: true
+  android: "launcher_icon"
   image_path: "assets/icon/paw.png"
 
-
 flutter_native_splash:
-  image: "assets/icon/paw.png"
   color: "000000"
+  image: "assets/icon/paw.png"
   android_disable_fullscreen: true
 
 flutter:
