--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,41 +1,41 @@
 name: e1547
 description: A mobile app for e621+e926.
-
 version: 1.7.3+39
+publish_to: none
 
 environment:
   sdk: '>=2.6.0 <3.0.0'
 
 dependencies:
 
+  # widgets
   expandable: ^4.1.3
   flutter_typeahead: ^2.0.0
-  pull_to_refresh: 1.6.3
+  pull_to_refresh: 1.6.4
   icon_shadow: ^1.0.1
   like_button: ^1.0.1
-  font_awesome_flutter: ^8.11.0
   flutter_staggered_grid_view: 0.3.3
   sliding_sheet: ^0.4.1
-
   video_player: ^1.0.0
-  wakelock: ^0.2.0+1
+  font_awesome_flutter: ^8.11.0
   photo_view: ^0.10.3
   cached_network_image: ^2.5.0
-  copy_to_gallery:
-    git:
-      url: git://github.com/clragon/copy_to_gallery.git
+  markdown_widget: ^1.2.6
 
-  http_auth: ^0.3.0
+  # data
+  wakelock: ^0.2.0+1
   url_launcher: ^5.5.3
   share: ^0.6.3+6
   intl: ^0.16.1
   async: ^2.4.2
-
   permission_handler: ^5.1.0+2
   shared_preferences: ^0.5.6
-
-
   flutter_statusbarcolor: ^0.2.3
+  dio: ^3.0.10
+  dio_flutter_transformer: ^3.0.2
+  copy_to_gallery:
+    git:
+      url: git://github.com/clragon/copy_to_gallery.git
 
   flutter:
     sdk: flutter
@@ -47,17 +47,19 @@ dev_dependencies:
   flutter_launcher_icons: ^0.8.0
   flutter_native_splash: ^0.2.9
 
+flutter:
+  uses-material-design: true
+  assets:
+    - assets/icon/paw.png
+
+
+# flutter pub run flutter_launcher_icons:main
 flutter_icons:
   ios: true
   android: "launcher_icon"
   image_path: "assets/icon/paw.png"
 
+# flutter pub run flutter_native_splash:create
 flutter_native_splash:
   color: "000000"
   image: "assets/icon/paw.png"
-  android_disable_fullscreen: true
-
-flutter:
-  uses-material-design: true
-  assets:
-    - assets/icon/paw.png
