--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,29 +9,30 @@ environment:
 dependencies:
 
   # widgets
-  expandable: ^4.1.3
-  flutter_typeahead: ^2.0.0
+  expandable: ^5.0.1
+  flutter_typeahead: ^3.1.1
   pull_to_refresh: 1.6.4
   icon_shadow: ^1.0.1
-  like_button: ^1.0.1
+  like_button: ^2.0.2
+  # grid 0.3.4 is fucking broken
   flutter_staggered_grid_view: 0.3.3
-  sliding_sheet: ^0.4.1
-  video_player: ^1.0.0
-  font_awesome_flutter: ^8.11.0
-  photo_view: ^0.10.3
-  cached_network_image: ^2.5.0
+  sliding_sheet: ^0.5.0
+  video_player: ^2.1.0
+  font_awesome_flutter: ^9.0.0
+  photo_view: ^0.11.1
+  cached_network_image: ^3.0.0
+  flutter_cache_manager: ^3.0.1
 
   # data
-  wakelock: ^0.2.0+1
-  url_launcher: ^5.5.3
-  share: ^0.6.3+6
-  intl: ^0.16.1
+  wakelock: ^0.5.0
+  url_launcher: ^6.0.3
+  share: ^2.0.1
+  intl: ^0.17.0
   async: ^2.4.2
-  permission_handler: ^5.1.0+2
-  shared_preferences: ^0.5.6
+  permission_handler: ^6.1.1
+  shared_preferences: ^2.0.5
   flutter_statusbarcolor: ^0.2.3
-  dio: ^3.0.10
-  dio_flutter_transformer: ^3.0.2
+  dio: ^4.0.0
   copy_to_gallery:
     git:
       url: git://github.com/clragon/copy_to_gallery.git
@@ -43,8 +44,8 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
 
-  flutter_launcher_icons: ^0.8.0
-  flutter_native_splash: ^0.2.9
+  flutter_launcher_icons: ^0.9.0
+  flutter_native_splash: ^1.1.7
 
 flutter:
   uses-material-design: true
