--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: e1547
 description: A mobile app for e621+e926.
-version: 1.7.4+40
+version: 1.7.5+41
 publish_to: none
 
 environment:
@@ -10,28 +10,26 @@ dependencies:
 
   # widgets
   expandable: ^5.0.1
-  flutter_typeahead: ^3.1.1
-  pull_to_refresh: ^2.0.0
-  icon_shadow: ^1.0.1
   like_button: ^2.0.2
-  # grid 0.3.4 is fucking broken
-  flutter_staggered_grid_view: 0.3.3
   sliding_sheet: ^0.5.0
   video_player: ^2.1.0
-  font_awesome_flutter: ^9.0.0
   photo_view: ^0.11.1
+  pull_to_refresh: ^2.0.0
   cached_network_image: ^3.0.0
+  font_awesome_flutter: ^9.0.0
+  flutter_typeahead: ^3.1.1
+  flutter_staggered_grid_view: 0.3.3 # ^0.3.4 breaks everything
   flutter_cache_manager: ^3.0.1
 
   # data
-  wakelock: ^0.5.0
-  url_launcher: ^6.0.3
+  dio: ^4.0.0
   share: ^2.0.1
+  url_launcher: ^6.0.3
+  wakelock: ^0.5.0
   intl: ^0.17.0
   async: ^2.4.2
   permission_handler: ^6.1.1
   shared_preferences: ^2.0.5
-  dio: ^4.0.0
   image_gallery_saver: ^1.6.9
 
   flutter:
@@ -54,9 +52,9 @@ flutter:
 flutter_icons:
   ios: true
   android: "launcher_icon"
-  image_path: "assets/icon/paw.png"
+  image_path: "assets/icon/app/paw.png"
 
 # flutter pub run flutter_native_splash:create
 flutter_native_splash:
   color: "000000"
-  image: "assets/icon/paw.png"
+  image: "assets/icon/app/paw.png"
