--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,6 +22,7 @@ dependencies:
   flutter_cache_manager: ^3.0.1
 
   # data
+  mutex: ^3.0.0
   dio: ^4.0.0
   share: ^2.0.1
   url_launcher: ^6.0.3
