--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,7 +19,7 @@ dependencies:
   cached_network_image: ^3.0.0
   font_awesome_flutter: ^9.0.0
   flutter_typeahead: ^3.1.1
-  flutter_staggered_grid_view: 0.3.3 # ^0.3.4 breaks everything
+  flutter_staggered_grid_view: 0.3.3 # ^0.3.4 ruins performance with caching
   flutter_cache_manager: ^3.0.1
 
   # data
