--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,14 +13,18 @@ dependencies:
   like_button: ^2.0.2
   sliding_sheet: ^0.5.0
   video_player: ^2.1.0
-  photo_view: ^0.11.1
   pull_to_refresh: ^2.0.0
   decorated_icon: ^1.2.0
   cached_network_image: ^3.0.0
   font_awesome_flutter: ^9.0.0
   flutter_typeahead: ^3.1.1
-  flutter_staggered_grid_view: 0.3.3 # ^0.3.4 ruins performance with caching
   flutter_cache_manager: ^3.0.1
+
+  photo_view:
+    git: git://github.com/clragon/photo_view.git
+  flutter_staggered_grid_view:
+    git:
+      url: git://github.com/clragon/flutter_staggered_grid_view.git
 
   # data
   mutex: ^3.0.0
