--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -39,7 +39,7 @@ android {
     }
 
     defaultConfig {
-        applicationId "clragon.e1547"
+        applicationId "net.e1547"
         minSdkVersion 16
         targetSdkVersion 30
         versionCode flutterVersionCode.toInteger()
