--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,6 +12,7 @@ dependencies:
   expandable: ^5.0.1
   like_button: ^2.0.2
   photo_view: ^0.11.1
+  sliver_tools: ^0.2.5
   sliding_sheet: ^0.5.0
   video_player: ^2.1.0
   pull_to_refresh: ^2.0.0
@@ -20,6 +21,7 @@ dependencies:
   font_awesome_flutter: ^9.0.0
   flutter_typeahead: ^3.1.1
   flutter_cache_manager: ^3.0.1
+  infinite_scroll_pagination: ^3.1.0
 
   flutter_staggered_grid_view:
     git: git://github.com/clragon/flutter_staggered_grid_view.git
