--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -14,7 +14,7 @@ jobs:
     
     - uses: subosito/flutter-action@v1
       with:
-        channel: 'beta' 
+        channel: 'stable' 
         
     - run: flutter build ios --no-codesign
     
@@ -54,7 +54,7 @@ jobs:
   
     - uses: subosito/flutter-action@v1
       with:
-        channel: 'beta' 
+        channel: 'stable' 
     
     # Get flutter dependencies.
     - run: flutter pub get
