--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,9 +22,7 @@ dependencies:
   flutter_typeahead: ^3.2.1
   flutter_cache_manager: ^3.0.1
   infinite_scroll_pagination: ^3.1.0
-
-  flutter_staggered_grid_view:
-    git: git://github.com/clragon/flutter_staggered_grid_view.git
+  flutter_staggered_grid_view: ^0.4.1
 
   # data
   filesize: ^2.0.1
