--- a/windows/runner/Runner.rc
+++ b/windows/runner/Runner.rc
@@ -93,7 +93,7 @@ BEGIN
             VALUE "FileDescription", "e1547" "\0"
             VALUE "FileVersion", VERSION_AS_STRING "\0"
             VALUE "InternalName", "e1547" "\0"
-            VALUE "LegalCopyright", "Copyright (C) 2021 e1547. All rights reserved." "\0"
+            VALUE "LegalCopyright", "Copyright (C) 2022 Downpour Development. All rights reserved." "\0"
             VALUE "OriginalFilename", "e1547.exe" "\0"
             VALUE "ProductName", "e1547" "\0"
             VALUE "ProductVersion", VERSION_AS_STRING "\0"
