--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -4,6 +4,8 @@ include: package:flutter_lints/flutter.yaml
 linter:
   rules:
     overridden_fields: false
+    use_build_context_synchronously: false
     use_key_in_widget_constructors: false
     avoid_redundant_argument_values: true
     avoid_function_literals_in_foreach_calls: false
+    use_super_parameters: true
