--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -47,5 +47,7 @@
 		<false/>
 		<key>NSPhotoLibraryAddUsageDescription</key>
 		<string>Downloaded images will be saved in the gallery</string>
+		<key>NSFaceIDUsageDescription</key>
+        <string>App can be locked with local authentication</string>
 	</dict>
 </plist>
