--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,6 +9,7 @@ environment:
 dependencies:
 
   # widgets
+  local_auth: ^2.0.2
   expandable: ^5.0.1
   like_button: ^2.0.4
   photo_view: ^0.13.0
@@ -21,6 +22,7 @@ dependencies:
   pull_to_refresh: ^2.0.0
   flutter_typeahead: ^4.0.0
   flutter_custom_tabs: ^1.0.4
+  flutter_screen_lock: ^5.0.12
   cached_network_image: ^3.2.1
   font_awesome_flutter: ^10.1.0
   flutter_cache_manager: ^3.3.0
