added a hasty proposal of the new history

--- a/build.yaml
+++ b/build.yaml
@@ -4,3 +4,8 @@ targets:
       json_serializable:
         options:
           field_rename: snake
+      drift_dev:
+        options:
+          new_sql_code_generation: true
+          generate_connect_constructor: true
+          use_data_class_name_for_companions: true
