--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   # data
   dio: ^4.0.6
   path: ^1.8.1
+  drift: ^1.7.1
   share: ^2.0.1
   async: ^2.9.0
   intl: ^0.17.0
@@ -56,6 +57,7 @@ dependencies:
   sqflite_common_ffi: ^2.1.0
   shared_preferences: ^2.0.11
   image_gallery_saver: ^1.7.1
+  sqlite3_flutter_libs: ^0.5.0
 
   infinite_scroll_pagination:
     git: https://github.com/clragon/infinite_scroll_pagination.git
@@ -74,6 +76,7 @@ dev_dependencies:
 
   # dart run build_runner build
   build_runner: ^2.1.11
+  drift_dev: ^1.7.0
   freezed: ^2.0.3+1
 
 dependency_overrides:
